# RL-Coursera

./: pyproject.toml
C1-Fundamentals/k-armed-bandit/: C1M1-Assignment1-v8.ipynb  e-greedy.npy  greedy_scores.npy
C1-Fundamentals/mab_from_scratch/: multi-armed-bandits.ipynb  thompson_sampling.ipynb
C1-Fundamentals/markov_decision_process/: MDP.ipynb
