[tool.poetry]
name = "rl-coursera"
version = "0.1.0"
description = ""
authors = ["André Costa <andrehesilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
